--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 code-practice-workspace.code-workspace
 react/react_with_material/package-lock.json
 react/react_with_material/package.json
+sass/sass_practice_1/styles/main.css.map
+sass/sass_practice.code-workspace
