--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ react/react_with_material/package-lock.json
 react/react_with_material/package.json
 sass/sass_practice_1/styles/main.css.map
 sass/sass_practice.code-workspace
+expressjs/express-workspace.code-workspace
